--- a/GasTransition.ioc
+++ b/GasTransition.ioc
@@ -41,12 +41,13 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM3
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC15-OSC32_OUT
@@ -70,16 +71,17 @@ Mcu.Pin24=PA13
 Mcu.Pin25=PA14
 Mcu.Pin26=PB6
 Mcu.Pin27=PB7
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin28=VP_IWDG_VS_IWDG
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PA0-WKUP
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=30
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -252,6 +254,8 @@ TIM3.Prescaler=72-1
 USART1.BaudRate=4800
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
